Acoount deactivation and activation end points and their unit tests.
